Merubah deskripsi gambar

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="card">
               <img src="img/pic2.jpeg" class="card-img-top" alt="pic1" height="450" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Gambar 2 pasangan avatar biru</p>
               </div>
             </div>
           </div>
@@ -98,7 +98,7 @@
             <div class="card">
               <img src="img/pic1.jpeg" class="card-img-top" alt="pic2" height="450" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Guan Yu durhaka sama Liu Bei dikutuk jadi batu</p>
               </div>
             </div>
           </div>
@@ -106,7 +106,7 @@
             <div class="card">
               <img src="img/pic3.jpeg" class="card-img-top" alt="pic3" height="450" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Ini adalah gambar Astro Boy</p>
               </div>
             </div>
           </div>
