--- a/index.html
+++ b/index.html
@@ -40,13 +40,7 @@
       <img src="img/profile.jpeg" alt="Hesa" width="350" class="rounded-circle img-thumbnail" />
       <h1 class="display-4" style="font-size: 50px">Hesa Ikhlas Putra</h1>
       <p class="lead">Information Systems Graduate</p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ffffff"
-          fill-opacity="1"
-          d="M0,96L80,128C160,160,320,224,480,218.7C640,213,800,139,960,90.7C1120,43,1280,21,1360,10.7L1440,0L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
-        ></path>
-      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,32L48,64C96,96,192,160,288,202.7C384,245,480,267,576,266.7C672,267,768,245,864,208C960,171,1056,117,1152,101.3C1248,85,1344,107,1392,117.3L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
     <!-- Jumbotron -->
 
@@ -55,25 +49,42 @@
       <div class="container text-center">
         <div class="row text-center mb-4">
           <div class="col">
-            <h2>About Me</h2>
+            <h1>About Me</h1>
           </div>
         </div>
-        <div class="row justify-content-center text-center fs-5">
+        <div class="row justify-content-center text-center fs-5 column-gap-5">
           <div class="col-md-4">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae tenetur modi, perspiciatis explicabo quo autem in laudantium incidunt fugiat commodi!</p>
+            <p class="paragraphs">I am an information system professional who graduated in 2022 with a strong foundation in technology and data management. With over 1.5 years of hands-on experience in the retail industry, I have honed my skills as an application support specialist. My expertise lies in ensuring the seamless operation of various applications critical to business functions, troubleshooting issues, and implementing effective solutions to enhance efficiency.</p>
           </div>
           <div class="col-md-4">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates pariatur eius eum recusandae iste aspernatur quidem ex? Est eum, omnis, quo in explicabo architecto vitae ipsa, nihil maxime magnam enim.</p>
+            <p class="paragraphs">I thrive in dynamic environments where I can leverage my technical knowledge and problem-solving abilities to drive innovation and contribute to organizational success. Outside of work, I enjoy staying updated with the latest advancements in technology and exploring new ways to optimize processes.</p>
           </div>
         </div>
+        <div class="row text-center mt-5 mb-3">
+          <div class="col">
+            <h2>Graduated From</h2>
+          </div>
+        </div>       
+        <div class="row justify-content-center">
+          <div class="col-md-4">
+            <img src="img/binus_logo.png" alt="pic1"/>
+          </div>
+        </div> 
+        <div class="row text-center mb-3" style="margin-top: 5rem;">
+          <div class="col">
+            <h2>Work Experience</h2>
+          </div>
+        </div>       
+        <div class="row justify-content-center">
+          <div class="col-md-4">
+            <img src="img/KLS_Logo.png" alt="pic1"/>
+          </div>
+          <div class="col-md-4">
+            <img src="img/gramed_logo.png" alt="pic2" />
+          </div>
+        </div> 
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#DAFFFF"
-          fill-opacity="1"
-          d="M0,96L48,96C96,96,192,96,288,96C384,96,480,96,576,117.3C672,139,768,181,864,170.7C960,160,1056,96,1152,85.3C1248,75,1344,117,1392,138.7L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-        ></path>
-      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#daffff" fill-opacity="1" d="M0,32L48,64C96,96,192,160,288,202.7C384,245,480,267,576,266.7C672,267,768,245,864,208C960,171,1056,117,1152,101.3C1248,85,1344,107,1392,117.3L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
     <!-- About -->
 
@@ -82,7 +93,7 @@
       <div class="container">
         <div class="row text-center mb-4">
           <div class="col">
-            <h2>My Project</h2>
+            <h1>My Project</h1>
           </div>
         </div>
         <div class="row">
@@ -112,13 +123,7 @@
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ffffff"
-          fill-opacity="1"
-          d="M0,256L48,234.7C96,213,192,171,288,138.7C384,107,480,85,576,112C672,139,768,213,864,229.3C960,245,1056,203,1152,170.7C1248,139,1344,117,1392,106.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-        ></path>
-      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,192L48,192C96,192,192,192,288,176C384,160,480,128,576,133.3C672,139,768,181,864,208C960,235,1056,245,1152,245.3C1248,245,1344,235,1392,229.3L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
     <!-- Project -->
 
@@ -127,7 +132,7 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>Contact Me</h2>
+            <h1>Contact Me</h1>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -157,12 +162,12 @@
         </div>
       </div>
     </section>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#007bff" fill-opacity="1" d="M0,192L48,192C96,192,192,192,288,176C384,160,480,128,576,133.3C672,139,768,181,864,208C960,235,1056,245,1152,245.3C1248,245,1344,235,1392,229.3L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     <!-- Contact -->
 
     <!-- Footer -->
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,192L48,176C96,160,192,128,288,128C384,128,480,160,576,181.3C672,203,768,213,864,229.3C960,245,1056,267,1152,245.3C1248,224,1344,160,1392,128L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-  <footer class="bg-primary text-white text-center pb-5">
-    <p>Created By <a href="https://www.linkedin.com/in/hesa-ikhlas-putra/" class="text-white fw-bold">Hesa Ikhlas Putra</a> </p>
+  <footer class="text-white text-center pb-5">
+    <p>Created By <a href="https://www.linkedin.com/in/hesa-ikhlas-putra/" class="text-white fw-bold text-decoration-none">Hesa Ikhlas Putra</a> </p>
   </footer>
     <!-- Footer -->
 
@@ -173,26 +178,21 @@
       const btnKirim = document.querySelector('.btn-kirim');
       const btnLoading = document.querySelector('.btn-loading');
       const myAlert = document.querySelector('.my-alert');
-
+    
       form.addEventListener('submit', e => {
-        e.preventDefault()
-        //On click submit
-        //Show loading, hide submit
-        btnLoading.classList.toggle('d-none');
-        btnKirim.classList.toggle('d-none');
-
+        e.preventDefault();
+        btnLoading.classList.remove('d-none');
+        btnKirim.classList.add('d-none');
+    
         fetch(scriptURL, { method: 'POST', body: new FormData(form)})
           .then(response => {
-            //Show submit, hide loading
-            btnLoading.classList.toggle('d-none');
-            btnKirim.classList.toggle('d-none');
-            //Show alert
-            myAlert.classList.toggle('d-none');
-            //Reset form
+            btnLoading.classList.add('d-none');
+            btnKirim.classList.remove('d-none');
+            myAlert.classList.remove('d-none');
             form.reset();
-            console.log('Success!', response)
+            console.log('Success!', response);
           })
-          .catch(error => console.error('Error!', error.message))
+          .catch(error => console.error('Error!', error.message));
       })
     </script>
   </body>
