--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Portofolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body id="home">
     <!-- Navbar -->
@@ -37,7 +38,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/profile.jpeg" alt="Hesa" width="350" class="rounded-circle img-thumbnail" />
+      <img src="img/profile.jpeg" alt="Hesa" width="350" class="rounded-circle img-thumbnail"/>
       <h1 class="display-4" style="font-size: 50px">Hesa Ikhlas Putra</h1>
       <p class="lead">Information Systems Graduate</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,32L48,64C96,96,192,160,288,202.7C384,245,480,267,576,266.7C672,267,768,245,864,208C960,171,1056,117,1152,101.3C1248,85,1344,107,1392,117.3L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
@@ -67,7 +68,7 @@
         </div>       
         <div class="row justify-content-center">
           <div class="col-md-4">
-            <img src="img/binus_logo.png" alt="pic1"/>
+            <img src="img/binus_logo.png" alt="pic1" data-aos="zoom-in"/>
           </div>
         </div> 
         <div class="row text-center mb-3" style="margin-top: 5rem;">
@@ -77,10 +78,10 @@
         </div>       
         <div class="row justify-content-center">
           <div class="col-md-4">
-            <img src="img/KLS_Logo.png" alt="pic1"/>
+            <img src="img/KLS_Logo.png" alt="pic1" data-aos="zoom-in"/>
           </div>
           <div class="col-md-4">
-            <img src="img/gramed_logo.png" alt="pic2" />
+            <img src="img/gramed_logo.png" alt="pic2" data-aos="zoom-in" />
           </div>
         </div> 
       </div>
@@ -98,7 +99,7 @@
         </div>
         <div class="row">
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="100">
               <img src="img/pic2.jpeg" class="card-img-top" alt="pic1" height="450" />
               <div class="card-body">
                 <p class="card-text">Gambar 2 pasangan avatar biru</p>
@@ -106,7 +107,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="200">
               <img src="img/pic1.jpeg" class="card-img-top" alt="pic2" height="450" />
               <div class="card-body">
                 <p class="card-text">Guan Yu durhaka sama Liu Bei dikutuk jadi batu</p>
@@ -114,7 +115,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="300">
               <img src="img/pic3.jpeg" class="card-img-top" alt="pic3" height="450" />
               <div class="card-body">
                 <p class="card-text">Ini adalah gambar Astro Boy</p>
@@ -123,6 +124,43 @@
           </div>
         </div>
       </div>
+    <!-- Player -->
+    <section id="my-player">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col" style="margin-bottom: 25px;">
+            <h2>Meet Our Player</h2>
+          </div>
+          <div class="row">
+            <div class="col-md-6 col-lg-4 mb-3" >
+              <div class="player-box">
+                <h4 class="player-name text-white">Declan Rice</h4>
+                <img src="img/england.png" alt="England" class="corner-img">
+                <img src="img/dec-removebg-preview.png" alt="Dec Rice" class="player-img">
+                <a href="#" class="btn btn-light detail-button">Show Detail</a>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-3">
+              <div class="player-box" style="background-color: #FFF200;">
+                <h4 class="player-name" style="color: #063672;">Kai Havertz</h4>
+                <img src="img/german.png" alt="England" class="corner-img">
+                <img src="img/kai-removebg-preview.png" alt="Kai Havertz" class="player-img">
+                <a href="#" class="btn btn-primary detail-button">Show Detail</a>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-3">
+              <div class="player-box">
+                <img src="img/england.png" alt="England" class="corner-img">
+                <h4 class="player-name text-white">Bukayo Saka</h4>
+                <img src="img/saka-removebg-preview.png" alt="Bukayo Saka" class="player-img">
+                <a href="#" class="btn btn-light detail-button">Show Detail</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,192L48,192C96,192,192,192,288,176C384,160,480,128,576,133.3C672,139,768,181,864,208C960,235,1056,245,1152,245.3C1248,245,1344,235,1392,229.3L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
     <!-- Project -->
@@ -166,12 +204,33 @@
     <!-- Contact -->
 
     <!-- Footer -->
-  <footer class="text-white text-center pb-5">
+  <footer class="text-white text-center" style="padding-bottom: 50px;">
     <p>Created By <a href="https://www.linkedin.com/in/hesa-ikhlas-putra/" class="text-white fw-bold text-decoration-none">Hesa Ikhlas Putra</a> </p>
   </footer>
     <!-- Footer -->
 
+    <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        once: true,
+        duration: 1000
+      });
+    </script>
+
+    <!-- Tilt JS -->
+    <script type="text/javascript" src="vanilla-tilt.min.js"></script>
+`   <script type="text/javascript">
+	    VanillaTilt.init(document.querySelectorAll('.player-box'), {
+		  max: 25,
+		  speed: 400
+	  });
+    </script>
+
+    <!-- JavaScript -->
     <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbwuOIFrcBXGZ8RfFOt4olwwFIZtXlV61Zisql_7N6CQd4rd5GD9KVHIT60NnybK7Z4ifQ/exec'
       const form = document.forms['google-form']
@@ -195,5 +254,6 @@
           .catch(error => console.error('Error!', error.message));
       })
     </script>
+     <!-- JavaScript -->
   </body>
 </html>
