--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
     <!-- Tilt JS -->
     <script type="text/javascript" src="vanilla-tilt.min.js"></script>
-`   <script type="text/javascript">
+    <script type="text/javascript">
 	    VanillaTilt.init(document.querySelectorAll('.player-box'), {
 		  max: 25,
 		  speed: 400
